[tool.poetry]
name = "cost-abroad"
version = "0.1.0"
description = "Visualises info about relative costs in European countries."
authors = ["jonboland <jon.boland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "2.15.0"
requests = "2.32.2"
dash-bootstrap-components = "^0.10.7"

[tool.poetry.dev-dependencies]
responses = "0.10.12"
dash-snapshot-testing = "1.2.2"
pytest = "^5.4.2"
importchecker = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
